--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>May the force be with you</h1>
+  <h1>I am one with the force and the force is with me </h1>
 
 
-  <script src="js/script.js"></script>
+  <script src="js/exercise.js"></script>
 </body>
 </html>
